# comic-manga-narrator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: BLOG-killing-the-two-pass-dance.md  DEVLOG.md  LESSONS.md  PUBLISHABLE-PLAN.md  ROADMAP.md  TTS-DECISION.md  TTS-RESEARCH.md  VOICES.md
scripts/: curate-cv-voices.py  install-expressive.sh  match-voice.py
src/comic_narrator/: __init__.py  build_script.py  config.py  narrate.py  parse_page.py  render_audio.py  render_video.py  scale.py  schemas.py  subtitles.py  webtoon.py
src/comic_narrator/audio/: __init__.py  freesound.py  indextts2_tts.py  mixer.py  tts_fish.py  two_stage_tts.py  voice_bank.py
src/comic_narrator/video/: __init__.py  camera.py  compose.py  ken_burns.py  parallax.py
src/comic_narrator/vision/: __init__.py  nemotron_client.py  panels.py  reading_order.py
tests/: __init__.py  conftest.py  test_integration.py  test_panels.py  test_parallax.py  test_scale.py  test_subtitles.py
